# LLM2Deck

./: .eslintignore  .eslintrc.cjs  .gitignore  CANOPYWAVE_CHECKLIST.md  CLAUDE.md  IMPROVEMENT.md  LEETCODE_PROMPT_IMPROVEMENTS.md  LICENSE  PLAN.md  PRODUCT_DESCRIPTION.md  README.md  REFACTORING.md  REFACTORING_REPORT.md  TESTING.md  TODO.md  config.yaml  convert_to_apkg.py  g4f_test.py  generate_anki_cards_multi.py  improvements.md  json_to_md.py  leetcode_anki.apkg  main.py  merge_anki_json.py  output-test  package-lock.json  package.json  prompts.yaml  pyproject.toml  refactoring_report.md  requirements.txt  test..py  test.py  test_direct.mjs  test_script.py  test_script.pynuv  test_script2.py  test_script3.py  verify_google_genai.py
.archived/: config.yaml  pyproject.toml
.archived/src/: cache.py  database.py  logging_utils.py  queries.py  types.py
.claude/: ralph-loop.local.md
.github/: pull_request_template.md
.github/workflows/: test.yml
archive/Part01/: Part_1.1_introduction_to_react.md  Part_1.2_Javascript.md  Part_1.3_Component_state_event_handlers.md  Part_1.4_A_more_complex_state_debugging_React_apps.md
archive/Part02/: Part_2.2_forms.md  (+4 more)
archived/: README.md
coverage/: clover.xml  config.js.html  coverage-final.json  database.js.html  index.html  ingestion.js.html  providers.js.html
examples/: config.full.yaml  config.minimal.yaml  config.standard.yaml  keys.full.yaml  keys.minimal.yaml  keys.standard.yaml  prompts.full.yaml  prompts.minimal.yaml  prompts.standard.yaml
scratch/: git_diff.txt
scripts/: test-metrics.py
src/: cache.py  cli.js  cli.py  compile.py  config.js  config.py  database.js  database.py  document.py  document_orchestrator.py  exceptions.py  generator.py  ingestion.js  logger.js  logging_config.py  logging_utils.py  models.py  orchestrator.js  orchestrator.py  postProcess.js  progress.py  prompts.js  prompts.py  providers.js  queries.py  questions.py  repositories.py  setup.py  stages.js  task_runner.py  types.py  utils.py
test dir/: test2.mjs
tests/: cli.test.js  concurrency.test.js  config.test.js  conftest.py  database.test.js  ingestion.test.js  logger.test.js  orchestrator.test.js  postProcess.test.js  providers.test.js  stages_generation.test.js  stages_json.test.js  stages_synthesis.test.js  test_cli.py  test_compile.py  test_config.py  test_generator.py  test_integration.py  test_newline_fix.py  test_orchestrator.py  test_retry.py
(+150 files in other folders)
