[project]
name = "python3ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-cookie3>=0.20.1",
    "cerebras-cloud-sdk>=1.59.0",
    "gemini-webapi>=1.17.3",
    "genanki>=0.13.1",
    "google-genai>=1.33.0",
    "markdown>=3.10",
    "openai>=2.11.0",
    "pillow>=11.3.0",
    "pydantic>=2.12.5",
    "pygments>=2.19.2",
    "python-dotenv>=1.2.1",
    "selenium>=4.35.0",
    "zendriver>=0.14.0",
]
