[project]
name = "llm2deck"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.3.0",
    "genanki>=0.13.1",
    "markdown>=3.10.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff.format]
preview = true

